--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/img_2"
+    android:background="@drawable/login_background"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".login.view.activity.LoginActivity">
