--- a/app/src/main/res/layout/fragment_supplier.xml
+++ b/app/src/main/res/layout/fragment_supplier.xml
@@ -23,6 +23,14 @@
             android:src="@drawable/loading_gif" />
     </LinearLayout>
 
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/emptyPlaceholder"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/empty_box_gif"
+        android:visibility="gone"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBuyers"
         android:layout_width="match_parent"
