--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,11 @@
         android:id="@+id/inventoryFragment"
         android:name="com.example.inventorymanager.home.view.fragment.InventoryFragment"
         android:label="fragment_inventory"
-        tools:layout="@layout/fragment_inventory" />
+        tools:layout="@layout/fragment_inventory" >
+        <action
+            android:id="@+id/action_inventoryFragment_to_addProductFragment2"
+            app:destination="@id/addProductFragment2" />
+    </fragment>
     <fragment
         android:id="@+id/supplierFragment"
         android:name="com.example.inventorymanager.home.view.fragment.SupplierFragment"
@@ -75,4 +79,9 @@
         android:name="com.example.inventorymanager.home.view.fragment.NewProductPurchaseFromSupplierFragment"
         android:label="fragment_new_product_purchase_from_supplier"
         tools:layout="@layout/fragment_new_product_purchase_from_supplier" />
+    <fragment
+        android:id="@+id/addProductFragment2"
+        android:name="com.example.inventorymanager.details.view.fragment.AddProductFragment"
+        android:label="fragment_add_product"
+        tools:layout="@layout/fragment_add_product" />
 </navigation>
