--- a/app/src/main/res/navigation/nav_graph_details.xml
+++ b/app/src/main/res/navigation/nav_graph_details.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_details"
-    app:startDestination="@id/addUserFragment2">
+    app:startDestination="@id/addProductFragment">
 
+    <fragment
+        android:id="@+id/addProductFragment"
+        android:name="com.example.inventorymanager.details.view.fragment.AddProductFragment"
+        android:label="fragment_add_product"
+        tools:layout="@layout/fragment_add_product" />
     <fragment
         android:id="@+id/addUserFragment2"
         android:name="com.example.inventorymanager.details.view.fragment.AddUserFragment"
