--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -81,7 +81,7 @@
         tools:layout="@layout/fragment_new_product_purchase_from_supplier" />
     <fragment
         android:id="@+id/addProductFragment2"
-        android:name="com.example.inventorymanager.details.view.fragment.AddProductFragment"
+        android:name="com.example.inventorymanager.home.view.fragment.AddProductFragment"
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product" />
 </navigation>
