--- a/app/src/main/res/navigation/nav_graph_details.xml
+++ b/app/src/main/res/navigation/nav_graph_details.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/addProductFragment"
-        android:name="com.example.inventorymanager.details.view.fragment.AddProductFragment"
+        android:name="com.example.inventorymanager.home.view.fragment.AddProductFragment"
         android:label="fragment_add_product"
         tools:layout="@layout/fragment_add_product" />
     <fragment
