--- a/app/src/main/res/layout/fragment_supplier.xml
+++ b/app/src/main/res/layout/fragment_supplier.xml
@@ -29,10 +29,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:src="@drawable/empty_box_gif"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvBuyers"
+        android:id="@+id/rvSupplier"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
