--- a/app/src/main/res/menu/menu_popup.xml
+++ b/app/src/main/res/menu/menu_popup.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/actionView"
-        android:title="@string/delete" />
+        android:title="@string/view" />
     <item
         android:id="@+id/actionEdit"
-        android:title="@string/delete" />
+        android:title="@string/edit" />
     <item
         android:id="@+id/actionDelete"
         android:title="@string/delete" />
