--- a/app/src/main/res/drawable/ic_collapse_all.xml
+++ b/app/src/main/res/drawable/ic_collapse_all.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:pathData="M440,520L200,520v-80h240v-240h80v240h240v80L520,520v240h-80v-240Z"
-      android:fillColor="@color/white"/>
+      android:pathData="m296,880 l-56,-56 240,-240 240,240 -56,56 -184,-184L296,880ZM480,376L240,136l56,-56 184,184 184,-184 56,56 -240,240Z"
+      android:fillColor="#e8eaed"/>
 </vector>
