--- a/app/src/main/res/drawable/ic_expand_all.xml
+++ b/app/src/main/res/drawable/ic_expand_all.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:pathData="M440,520L200,520v-80h240v-240h80v240h240v80L520,520v240h-80v-240Z"
-      android:fillColor="@color/white"/>
+      android:pathData="M480,880 L240,640l57,-57 183,183 183,-183 57,57L480,880ZM298,376l-58,-56 240,-240 240,240 -58,56 -182,-182 -182,182Z"
+      android:fillColor="#e8eaed"/>
 </vector>
