--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -12,15 +12,21 @@
         android:id="@+id/mainProgressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/app_theme"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
 
-        <pl.droidsonroids.gif.GifImageView
+        <com.airbnb.lottie.LottieAnimationView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loading_gif" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loading_lottie_json" />
+        <!--        <pl.droidsonroids.gif.GifImageView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:src="@drawable/loading_gif" />-->
     </LinearLayout>
 
     <!-- Main Layout -->
@@ -177,11 +183,11 @@
                     android:id="@+id/btnAdd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="50dp"
                     android:backgroundTint="@color/app_theme"
                     android:text="@string/add"
-                    android:layout_marginTop="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddress" />
