--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,15 +13,21 @@
         android:id="@+id/mainProgressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/app_theme"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
 
-        <pl.droidsonroids.gif.GifImageView
+        <com.airbnb.lottie.LottieAnimationView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loading_gif" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loading_lottie_json" />
+        <!--        <pl.droidsonroids.gif.GifImageView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:src="@drawable/loading_gif" />-->
     </LinearLayout>
 
     <pl.droidsonroids.gif.GifImageView
