--- a/app/src/main/res/layout/fragment_supplier.xml
+++ b/app/src/main/res/layout/fragment_supplier.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,20 +9,27 @@
     android:padding="8dp"
     tools:context=".home.view.fragment.SupplierFragment">
 
-    <LinearLayout
-        android:id="@+id/mainProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/app_theme"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
 
-        <pl.droidsonroids.gif.GifImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loading_gif" />
-    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/mainProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/loading_lottie_json"/>
+<!--            <pl.droidsonroids.gif.GifImageView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/loading_gif_2" />-->
+        </LinearLayout>
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/emptyPlaceholder"
